jade/testData/injectedScriptJs/highlightingVar.jade
html
    script.
        var st = "";
        var i = 1;
        var<error descr="Variable name expected">;</error>
        var d = "";
